--- a/languages/lazaruside.sk.po
+++ b/languages/lazaruside.sk.po
@@ -3919,7 +3919,8 @@ msgid "Abort whole loading"
 msgstr "Zrušiť celé načítanie"
 
 #: lazarusidestrconsts.lisabout
-msgid "About ..."
+msgctxt "lazarusidestrconsts.lisabout"
+msgid "About"
 msgstr ""
 
 #: lazarusidestrconsts.lisabout2
@@ -4707,7 +4708,7 @@ msgid "Cannot create file \"%s\""
 msgstr "Nemožno vytvoriť súbor %s%s%s"
 
 #: lazarusidestrconsts.liscannotexecute
-msgid "can not execute \"%s\""
+msgid "cannot execute \"%s\""
 msgstr ""
 
 #: lazarusidestrconsts.liscannotfind
@@ -4715,7 +4716,7 @@ msgid "Cannot find %s"
 msgstr ""
 
 #: lazarusidestrconsts.liscannotfindexecutable
-msgid "can not find executable \"%s\""
+msgid "cannot find executable \"%s\""
 msgstr ""
 
 #: lazarusidestrconsts.liscannotfindlazarusstarter
@@ -8289,7 +8290,7 @@ msgid "Errors"
 msgstr "Chyby"
 
 #: lazarusidestrconsts.liserrors2
-msgid ", Errors:%s"
+msgid ", Errors: %s"
 msgstr ""
 
 #: lazarusidestrconsts.liserrorsavingto
@@ -8655,7 +8656,7 @@ msgid "Filename/Address"
 msgstr "Meno súboru/adresa"
 
 #: lazarusidestrconsts.lisfilenamestyle
-msgid "Filename Style ..."
+msgid "Filename Style"
 msgstr ""
 
 #: lazarusidestrconsts.lisfilenotfound
@@ -8841,14 +8842,6 @@ msgstr "Nájsť kombináciu klávesov"
 
 #: lazarusidestrconsts.lisfindmissingunit
 msgid "Find missing unit"
-msgstr ""
-
-#: lazarusidestrconsts.lisfindthenextoccurenceofthephrase
-msgid "Find the next occurence of the phrase"
-msgstr ""
-
-#: lazarusidestrconsts.lisfindthepreviousoccurenceofthephrase
-msgid "Find the previous occurence of the phrase"
 msgstr ""
 
 #: lazarusidestrconsts.lisfirst
@@ -9179,7 +9172,7 @@ msgid "Hint: Check if two packages contain a unit with the same name."
 msgstr "Rada: Skontrolujte, či dva balíčky neobsahujú jednotku s rovnakým menom."
 
 #: lazarusidestrconsts.lishints
-msgid ", Hints:%s"
+msgid ", Hints: %s"
 msgstr ""
 
 #: lazarusidestrconsts.lishintsaveall
@@ -11948,6 +11941,7 @@ msgid "Tabs to Spaces in Selection"
 msgstr "Tabulátory výberu na medzery"
 
 #: lazarusidestrconsts.lismenutemplateabout
+msgctxt "lazarusidestrconsts.lismenutemplateabout"
 msgid "About"
 msgstr "O ..."
 
@@ -17913,7 +17907,7 @@ msgid "Warning: ambiguous file found: \"%s\". Source file is: \"%s\""
 msgstr "Upozornenie: Nájdený nejednoznačný súbor: %s%s%s. Zdrojový kód je: %s%s%s"
 
 #: lazarusidestrconsts.liswarnings
-msgid ", Warnings:%s"
+msgid ", Warnings: %s"
 msgstr ""
 
 #: lazarusidestrconsts.liswarningthisisthemainunitthenewmainunitwillbepas
